almost all animal (fishing remain)